# SkyrimLoadingPercent

./: .gitignore  CMakeLists.txt  CMakePresets.json  CREDITS.md  LICENSE  README.md  SkyrimLoadingPercent_default.ini  build.ps1  package.ps1  vcpkg.json
MCM/Config/SkyrimLoadingPercent/: config.json  settings.ini
SKSE/Plugins/: SkyrimLoadingPercent.esp  SkyrimLoadingPercent.ini
Scripts/: SkyrimLoadingPercentMCM.pex
Source/Scripts/: Debug.psc  GlobalVariable.psc  SkyrimLoadingPercentMCM.psc  TESV_Papyrus_Flags.flg
cmake/: copy_if_missing.cmake
fomod/: info.xml
interface/: LoadingMenu.as  LoadingMenu.swf
src/: PCH.h  ProgressTracker.cpp  ProgressTracker.h  main.cpp
src/config/: Settings.cpp  Settings.h
src/hooks/: FileIOHook.cpp  FileIOHook.h
src/ui/: D3DOverlay.cpp  D3DOverlay.h  ScaleformManager.cpp  ScaleformManager.h
